@@ -1,3 +1,11 @@
+2011-07-13  Romain Francois  <romain@r-enthusiasts.com>
+
+    * inst/include/Rcpp/traits/is_eigen_base.h: helper traits to facilitate 
+    implementation of the RcppEigen package. The is_eigen_base traits identifies
+    if a class derives from EigenBase using SFINAE
+    
+    * inst/include/Rcpp/internal/wrap.h: new layer of dispatch to help RcppEigen
+
 2011-07-07  Romain Francois  <romain@r-enthusiasts.com>
 
     * inst/include/Rcpp/XPtr.h: The XPtr class template gains a second template
